->  Configured roles for Admin and Tenant (Hospital/Clinic) in the backend -> Working on defining custom permissions for different tenant user roles (e.g., Doctor, Nurse, Lab Technician).

--- a/10.2.0/aspnet-core/src/EMRSystem.Core/Localization/SourceFiles/EMRSystem.xml
+++ b/10.2.0/aspnet-core/src/EMRSystem.Core/Localization/SourceFiles/EMRSystem.xml
@@ -120,5 +120,8 @@
     <text name="403PageHeader">Forbidden</text>
     <text name="403PageDescription">You don't have permission to access this resource. Please contact your administrator.</text>
     <text name="403PageButton">Go back to Dashboard</text>
+    <text name="ManagePrescriptions">Manage Prescriptions</text>
+    <text name="ManageAppointments">Manage Appointments</text>
+    <text name="ManageVisits">Manage Visits</text>
   </texts>
 </localizationDictionary>
