-> Implemented a structured sidebar with role-based access, permissions, and routing for all user types. -> Developed the Appointment module, including listing, full CRUD operations, and UI design. -> Worked on adding localization support for roles and permissions throughout the application.

--- a/10.2.0/aspnet-core/src/EMRSystem.Core/Localization/SourceFiles/EMRSystem.xml
+++ b/10.2.0/aspnet-core/src/EMRSystem.Core/Localization/SourceFiles/EMRSystem.xml
@@ -120,14 +120,60 @@
 		<text name="403PageHeader">Forbidden</text>
 		<text name="403PageDescription">You don't have permission to access this resource. Please contact your administrator.</text>
 		<text name="403PageButton">Go back to Dashboard</text>
-		<text name="ManagePrescriptions">Manage Prescriptions</text>
+		<!--<text name="ManagePrescriptions">Manage Prescriptions</text>
 		<text name="ManageAppointments">Manage Appointments</text>
 		<text name="ManageVisits">Manage Visits</text>
-		<text name="Doctors">Manage Doctors</text>
 		<text name="Nurse">Mange Nurse</text>
 		<text name="Patient">Manage Patient</text>
 		<text name="Pharmacist">Manage Pharmacist</text>
 		<text name="BillingStaff">Billing Staff</text>
+		<text name="LabTechnician">Lab Technician</text>-->
+
+
+		<text name="Doctors">Doctors</text>
+		<text name="Appointments">Appointments</text>
+		<text name="ViewAppointments">View Appointments</text>
+		<text name="UpdateAppointmentStatus">Update Appointment Status</text>
+		<text name="ScheduleAppointments">Schedule Appointments</text>
+		<text name="Patients">Patients</text>
+		<text name="ViewPatients">View Patients</text>
+		<text name="ViewPatientHistory">View PatientHistory</text>
+		<text name="Prescriptions">Prescriptions</text>
+		<text name="CreatePrescriptions">Create Prescriptions</text>
+		<text name="UpdatePrescriptions">Update Prescriptions</text>
+		<text name="Visits">Visits</text>
+		<text name="ViewVisits">View Visits</text>
+		<text name="CompleteVisit">Complete Visit</text>
+		<text name="LabOrders">LabOrders</text>
+		<text name="CreateLabOrders">Create LabOrders</text>
+		<text name="ViewLabOrders">View LabOrders</text>
+		<text name="Nurse">Nurse</text>
+		<text name="AssignedPatients">Assigned Patients</text>
+		<text name="ViewAssignedPatients">View Assigned Patients</text>
+		<text name="MedicationLog">Medication Log</text>
+		<text name="ViewMedicationLog">View Medication Log</text>
+		<text name="UpdateMedicationLog">Update Medication Log</text>
+		<text name="VitalsNotes">Vitals Notes</text>
+		<text name="ViewVitals">View Vitals</text>
+		<text name="CreateVitals">Create Vitals</text>
+		<text name="UpdateVitals">Update Vitals</text>
+		<text name="BillingStaff">Billing Staff</text>
+		<text name="CreateInvoices">Create Invoices</text>
+		<text name="ViewInvoices">View Invoices</text>
+		<text name="UpdateInvoices">Update Invoices</text>
+		<text name="CreatePayments">Create Payments</text>
+		<text name="ViewPayments">View Payments</text>
+		<text name="ViewInsurance">View Insurance</text>
+		<text name="ViewReports">View Reports</text>
 		<text name="LabTechnician">Lab Technician</text>
+		<text name="ViewInventory">View Inventory</text>
+		<text name="UpdateInventory">Update Inventory</text>
+		<text name="ViewLabReports">View LabReports</text>
+		<text name="ManageTestRequests">Manage Test Requests</text>
+		<text name="Pharmacist">Pharmacist</text>
+		<text name="ViewPharmaInventory">View PharmaInventory</text>
+		<text name="UpdatePharmaInventory">Update PharmaInventory</text>
+		<text name="ViewPrescriptions">View Prescriptions</text>
+		<text name="DispensePrescriptions">Dispense Prescriptions</text>
 	</texts>
 </localizationDictionary>
